--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
-    "@studio-freight/lenis": "^1.0.39",
+    "@studio-freight/lenis": "^1.0.40",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
