--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.16.0",
     "@studio-freight/lenis": "^1.0.40",
-    "framer-motion": "^11.0.8",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.22",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-scroll-parallax": "^3.4.5"
+    "react-router-dom": "^6.22.3",
+    "react-scroll-parallax": "^3.4.5",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
